--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,20 @@
 body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: x-large;
-  background-color: aquamarine;
   padding-top: 80px;
+  margin: 0;
+  background: #0f3a56;
+  background: -moz-linear-gradient(left, #0f3a56 0%, #0e3651 50%, #144e75 100%);
+  background: -webkit-linear-gradient(left, #0f3a56 0%, #0e3651 50%, #144e75 100%);
+  background: linear-gradient(to right, #0f3a56 0%, #0e3651 50%, #144e75 100%);
 }
 
-header, footer {
+header,
+footer {
   position: fixed;
   text-align: center;
   width: 100%;
-  background-color: blueviolet;
+  background-color: rgba(226, 180, 0, 1);
   z-index: 999;
 }
 
@@ -26,4 +31,30 @@ footer {
   font-size: 10px;
   border-top: solid black 1px;
   padding-top: 4px;
+}
+
+.title,
+.colorizer {
+  color: rgb(226, 180, 0);
+}
+
+hr.colorizer {
+  border: 1px solid rgb(226, 180, 0);
+}
+
+.links {
+  text-decoration: none;
+  color: #07447a;
+  font-weight: bold;
+}
+
+.links:hover {
+  color: white;
+}
+
+input[type=text] {
+  background-color: rgb(226, 180, 0);
+  color: #07447a;
+  font-weight: bold;
+ 
 }
